<resources>
    <string name="app_name">VvmContratos</string>


    <!-- texto de teste -->
    <string name="lorem_ipsum_titulo">Lorem ipsum dolor sit amet</string>

    <string name="lorem_ipsum_grande">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum. Aliquam nonummy auctor massa. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla at risus. Quisque purus magna, auctor et, sagittis ac, posuere eu, lectus. Nam mattis, felis ut adipiscing </string>
    <string name="lorem_ipsum_texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="lorem_ipsum_texto_pequeno">consectetur adipiscing</string>
    <string name="lorem_ipsum_numero">290346</string>
    <string name="lorem_ipsum_data">29-03-2046</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="novo_contrato">Novo contrato</string>
    <string name="dados_contratos">Dados do contrato</string>
    <string name="nif">Nif</string>
    <string name="tipo_contrato">Tipo de contrato</string>
    <string name="contrato_iniciado_agenda">Contrato iniciado na agenda</string>
    <string name="validar">Validar</string>
    <string name="iniciar">Iniciar</string>
    <string name="empresa">Empresa</string>
    <string name="marca">Marca</string>
    <string name="criar_cliente">Criar cliente</string>
    <string name="cliente_inexistente_preencher_campos">Cliente inexistente - Por favor preencha os campos</string>
    <string name="cliente">Cliente</string>
    <string name="email">Email</string>
    <string name="atividade">Atividade</string>
    <string name="niss">Niss</string>
    <string name="responsavel">Responsável</string>
    <string name="segmento">Segmento</string>
    <string name="morada">Morada</string>
    <string name="freguesia_localidade">Freguesia / Localidade</string>
    <string name="codigo_postal">Código Postal</string>
    <string name="contactos">Contactos</string>
    <string name="autorizado">Autorizado</string>
    <string name="grupo">Grupo</string>
    <string name="_Atividade_">" / Atividade"</string>
    <string name="tipo_morada">Tipo de morada</string>
    <string name="moradas_disponiveis">Moradas disponíveis</string>
    <string name="freguesia">Freguesia</string>
    <string name="localidade">Localidade</string>
    <string name="representado_por">Representado por</string>
    <string name="cargo">Cargo</string>
    <string name="telefone">Telefone</string>
    <string name="telemovel">Telemóvel</string>
    <string name="fax">Fax</string>
    <string name="unidades_">Unidades:</string>
    <string name="valor_unitario_">Valor unitário:</string>
    <string name="iva">Iva:</string>
    <string name="iva_">Iva</string>
    <string name="total__sem_iva">Total (s/IVA)</string>
    <string name="opcoes_assinatura">Opções de assinatura</string>
    <string name="data_recolha_assinatura">Data da recolha da assinatura</string>
    <string name="contrato_incompleto_assinatura_indisponivel">Contrato incompleto - Assinatura indisponível</string>
    <string name="assinatura">Assinatura</string>
    <string name="gravar">Gravar</string>
    <string name="alerta_assinatura_rt">Num contrato de responsabilidade total a data do contrato e a data dos pagamentos deve ser a mesma.</string>
    <string name="atualizar_data">Atualizar data</string>
    <string name="observacao">Observação</string>
    <string name="documento">Documento</string>
    <string name="rever_concluir">Rever / Concluir</string>
    <string name="evento">Evento</string>
    <string name="numero_contrato">Número do contrato</string>
    <string name="data_contrato">Data do contrato</string>
    <string name="documentos_pre_visualizacao">Documentos para pré-visualização</string>
    <string name="enviar_contrato">Enviar contrato</string>
    <string name="acordo_incompleto">Acordo incompleto</string>
    <string name="extintor">Extintor</string>
    <string name="quantidade">Quantidade</string>
    <string name="tipo_extintor">Tipo de extintor</string>
    <string name="data_validade">Data de validade</string>
    <string name="data_validade_">Data de validade:</string>
    <string name="data_carregamento">Data de carregamento</string>
    <string name="data_carregamento_">Data de carregamento:</string>
    <string name="n_serie">Nº Série</string>
    <string name="n_serie_">Nº Série:</string>
    <string name="manter">Manter</string>
    <string name="pagamento">Pagamento</string>
    <string name="data_pagamento">Data do pagamento</string>
    <string name="tpa">TPA</string>
    <string name="id_tpa">Id TPA</string>
    <string name="per">PER</string>
    <string name="tr">TR</string>
    <string name="cheque_n_tb_sdd">Cheque Nº/TB/SDD</string>
    <string name="banco">Banco</string>
    <string name="codigo_produto">Código do produto</string>
    <string name="valor_pagar_sem_iva">Valor a pagar s/IVA</string>
    <string name="valor_referente_iva">Valor referente ao IVA</string>
    <string name="completar_pagamento">Completar pagamento</string>
    <string name="n_trabalhadores">Nº Trabalhadores</string>
    <string name="valor_contrato_sem_iva">Valor contracto s/IVA</string>
    <string name="producao">Produção</string>
    <string name="producao_">Produção: </string>
    <string name="tipo_actividade">Tipo atividade</string>
    <string name="ref_campanhas">Ref. campanhas</string>
    <string name="data_emissao">Data de emissão:</string>
    <string name="valor_">Valor:</string>
    <string name="formando">Formando</string>
    <string name="nome">Nome</string>
    <string name="nacionalidade">Nacionalidade</string>
    <string name="profissao">Profissão</string>
    <string name="profissao_">Profissão:</string>
    <string name="posto">Posto</string>
    <string name="tipificacao_profissao">Tipificação da profissão</string>
    <string name="data_nascimento">Data de nascimento</string>
    <string name="data_nascimento_">Data de nascimento:</string>
    <string name="data_admissao">Data de admissão</string>
    <string name="data_admissao_">Data de admissão:</string>
    <string name="genero">Género</string>
    <string name="clinica">Clinica</string>
    <string name="deseja_atualizar_tpa">Deseja atualizar o identificador do TPA?</string>
    <string name="utilizador">Utilizador</string>
    <string name="palavra_chave">Palavra-chave</string>
    <string name="local">Local</string>
    <string name="local_">Local:</string>
    <string name="horario">Horário</string>
    <string name="horario_">Horário:</string>
    <string name="tipo_formacao">Tipo de formação</string>
    <string name="tipo_formacao_">Tipo de formação:</string>
    <string name="servico">Serviço</string>
    <string name="produto">Produto</string>
    <string name="unidades">Unidades</string>
    <string name="valor_total_sem_iva">Valor total (s/IVA)</string>
    <string name="valor_unitario">Valor unitário</string>
    <string name="servicos">Serviços</string>
    <string name="contrato">Contrato</string>
    <string name="numero_tipos_">Número de tipos:</string>
    <string name="numero_detalhes_">Número de detalhes:</string>
    <string name="ultima_atualizacao_">Última atualização:</string>
    <string name="opcoes_avancadas">Opções avançadas</string>
    <string name="tipos">Tipos</string>
    <string name="gerir_tipos">Gerir tipos</string>
    <string name="dados">Dados</string>
    <string name="exportar_base_dados">Exportar base de dados</string>
    <string name="email_pdf">Enviar email com pdf</string>
    <string name="pdf">Pdf</string>
    <string name="teste">Teste</string>
    <string name="importar">Importar</string>
    <string name="importar_base_dados">Importar base de dados</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="configuracao">Configuração</string>
    <string name="permissoes">Permissões</string>
    <string name="key_permissoes">permissoes</string>
    <string name="aplicacao">Aplicação</string>
    <string name="versao">Versão</string>
    <string name="ultima_atualizacao">Última atualização</string>
    <string name="key_versao_app">versao</string>
    <string name="key_ultima_atualizacao">atualizacao</string>
    <string name="definicoes">Definições</string>
    <string name="recarregar_tipos">Recarregar tipos</string>
    <string name="numero_">Número:</string>
    <string name="data_">Data:</string>
    <string name="data_termino_edicao_">Data de término da edição:</string>
    <string name="empresa_">Empresa:</string>
    <string name="marca_">Marca:</string>
    <string name="acordos_realizados">Acordos realizados</string>
    <string name="cp3">CP3</string>
    <string name="cp4">CP4</string>
</resources>