<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <!--        <import type="com.artemissoftware.vvmcontratos.BuildConfig"/>-->

    </data>



    <androidx.cardview.widget.CardView
        style="@style/cartao">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:id="@+id/textView"
                style="@style/titulo.medio.bold"
                android:layout_width="0dp"
                android:text="@string/lorem_ipsum_texto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView21"
                style="@style/titulo.medio"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                android:text="@string/lorem_ipsum_texto_pequeno"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />



            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView21">

                <TextView
                    style="@style/texto"
                    android:text="@string/data_emissao"/>

                <TextView
                    style="@style/texto"
                    android:layout_marginLeft="8dp"
                    android:text="@string/lorem_ipsum_data"/>
                <!-- android:text="@{anomalia., default=descricao}" -->
            </LinearLayout>



            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                <TextView
                    style="@style/texto"
                    android:text="@string/producao_"/>

                <TextView
                    style="@style/texto"
                    android:layout_marginLeft="8dp"
                    android:text="@string/lorem_ipsum_numero"/>
                <!-- android:text="@{anomalia., default=descricao}" -->
            </LinearLayout>



            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

                <TextView
                    style="@style/texto"
                    android:text="@string/valor_" />

                <TextView
                    android:id="@+id/textView2"
                    style="@style/texto"
                    android:layout_marginLeft="8dp" />

                <!-- android:text="@{anomalia., default=descricao}" -->
            </LinearLayout>




            <TextView
                android:id="@+id/textView38"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />




            <!--            android:text="@{StringUtil.converterString(anomalia.resultado.id), default=id}"-->
            <!--            android:visibility="@{BuildConfig.DEBUG ? View.VISIBLE : View.GONE}"-->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>