<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <!--        <import type="com.artemissoftware.vvmcontratos.BuildConfig"/>-->

    </data>



    <androidx.cardview.widget.CardView
        style="@style/cartao">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp">

            <TextView
                android:id="@+id/textView"
                style="@style/titulo.medio.bold"
                android:layout_width="0dp"
                android:text="@string/lorem_ipsum_texto_pequeno"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView4"
                style="@style/texto"
                android:layout_marginTop="24dp"
                android:text="@string/numero_tipos_"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                style="@style/texto"
                android:text="@string/lorem_ipsum_numero"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView4" />
            <!-- android:text="@{anomalia., default=descricao}" -->


            <TextView
                android:id="@+id/textView5"
                style="@style/texto"
                android:layout_marginTop="16dp"
                android:text="@string/numero_detalhes_"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView6"
                style="@style/texto"
                android:layout_marginStart="24dp"
                android:text="@string/lorem_ipsum_numero"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView5" />
            <!-- android:text="@{anomalia., default=descricao}" -->


            <TextView
                android:id="@+id/textView7"
                style="@style/texto"
                android:layout_marginTop="24dp"
                android:text="@string/ultima_atualizacao_"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView8"
                style="@style/texto"
                android:text="@string/lorem_ipsum_numero"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView7" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>