<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.definicoes.OpcoesAvancadasFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/ecra"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp">

            <TextView
                style="@style/titulo.regular.bold"
                android:text="@string/opcoes_avancadas" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">


                <TextView
                    android:id="@+id/textview"
                    style="@style/titulo.medio.bold"
                    android:text="@string/tipos"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>


                <View
                    android:id="@+id/view1"
                    android:layout_width="280dp"
                    android:layout_height="0.2dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/cor_divisor"
                    app:layout_constraintStart_toStartOf="@+id/textview"
                    app:layout_constraintTop_toBottomOf="@+id/textview" />


                <LinearLayout
                    android:id="@+id/lnr_lyt_tipos"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/White"
                    android:elevation="0.2dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:outlineProvider="bounds"
                    android:padding="10dp"
                    app:layout_constraintStart_toStartOf="@+id/textview"
                    app:layout_constraintTop_toBottomOf="@+id/view1">

                    <TextView
                        style="@style/texto.detalhe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:drawableRight="@drawable/ic_lorem_ipsum_24"
                        android:gravity="center_vertical"
                        android:text="@string/gerir_tipos" />
                </LinearLayout>



                <TextView
                    android:id="@+id/textview3"
                    style="@style/titulo.medio.bold"
                    android:layout_marginTop="32dp"
                    android:text="@string/dados"
                    app:layout_constraintStart_toStartOf="@+id/textview"
                    app:layout_constraintTop_toBottomOf="@+id/lnr_lyt_tipos" />


                <View
                    android:id="@+id/view2"
                    android:layout_width="280dp"
                    android:layout_height="0.2dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/cor_divisor"
                    app:layout_constraintStart_toStartOf="@+id/textview"
                    app:layout_constraintTop_toBottomOf="@+id/textview3" />


                <LinearLayout
                    android:id="@+id/lnr_lyt_exportar_bd"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/White"
                    android:elevation="0.2dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    app:layout_constraintStart_toStartOf="@+id/textview"
                    app:layout_constraintTop_toBottomOf="@+id/view2">

                    <TextView
                        style="@style/texto.detalhe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:drawableRight="@drawable/ic_lorem_ipsum_24"
                        android:text="@string/exportar_base_dados" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/lnr_lyt_importar_bd"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/White"
                    android:elevation="0.2dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    app:layout_constraintStart_toStartOf="@+id/textview"
                    app:layout_constraintTop_toBottomOf="@+id/lnr_lyt_exportar_bd">

                    <TextView
                        style="@style/texto.detalhe"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:text="@string/importar_base_dados" />

                    <com.jaredrummler.materialspinner.MaterialSpinner
                        android:id="@+id/spnr_ficheiros_bd"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_importar_bd"
                        android:enabled="false"
                        style="?attr/borderlessButtonStyle"
                        android:layout_marginLeft="16dp"
                        android:backgroundTint="@color/cor_botao"
                        android:textColor="@color/cor_texto_branco"
                        android:layout_width="wrap_content"
                        android:layout_height="52dp"
                        android:text="@string/importar" />
                </LinearLayout>



                <TextView
                    android:id="@+id/textview31"
                    style="@style/titulo.medio.bold"
                    android:layout_marginTop="32dp"
                    android:text="@string/teste"
                    app:layout_constraintStart_toStartOf="@+id/textview"
                    app:layout_constraintTop_toBottomOf="@+id/lnr_lyt_importar_bd" />


                <View
                    android:id="@+id/view3"
                    android:layout_width="280dp"
                    android:layout_height="0.2dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/cor_divisor"
                    app:layout_constraintStart_toStartOf="@+id/textview"
                    app:layout_constraintTop_toBottomOf="@+id/textview31" />


                <LinearLayout
                    android:id="@+id/lnr_lyt_testar_pdf"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/White"
                    android:elevation="0.2dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    app:layout_constraintStart_toStartOf="@+id/textview"
                    app:layout_constraintTop_toBottomOf="@+id/view3">

                    <TextView
                        style="@style/texto.detalhe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:drawableRight="@drawable/ic_lorem_ipsum_24"
                        android:text="@string/pdf" />
                </LinearLayout>



                <LinearLayout
                    android:id="@+id/lnr_lyt_testar_envio_mail_pdf"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/White"
                    android:elevation="0.2dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    app:layout_constraintStart_toStartOf="@+id/textview"
                    app:layout_constraintTop_toBottomOf="@+id/lnr_lyt_testar_pdf">

                    <TextView
                        style="@style/texto.detalhe"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:drawableRight="@drawable/ic_lorem_ipsum_24"
                        android:text="@string/email_pdf" />
                </LinearLayout>





            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
